--- a/src/styles.module.less
+++ b/src/styles.module.less
@@ -19,9 +19,9 @@
   light-grey: rgb(51, 51, 51);
 };
 
-@width: 600px;
+@width: 700px;
 @height: @width * 0.4;
-@info-container-padding: 15px;
+@info-container-padding: 20px;
 @profile-image-size: 40px;
 
 // mixins
@@ -39,20 +39,20 @@
 
 .containerStyles() {
   font-family: 'Manrope', sans-serif;
-  width: @width;
+  max-width: @width;
   height: @height;
   display: flex;
   background-color: @theme[background];
-  font-size: 13px;
+  font-size: 14px;
   color: @theme[dark-grey];
   border-radius: @width * 0.02;
   .shadow-mix();
 
-  @media (max-width: 550px) {
-    font-size: 11px;
+  @media (max-width: 580px) {
+    font-size: 12px;
   }
 
-  @media (max-width: 450px) {
+  @media (max-width: 480px) {
     flex-direction: column;
     width: 300px;
     min-width: 300px;
@@ -89,7 +89,7 @@
       letter-spacing: 1px;
     }
     .subtitle {
-      line-height: 20px;
+      line-height: 25px;
       color: @theme[dark-blue];
     }
   }
@@ -224,7 +224,7 @@
     }
   }
 
-  @media (max-width: 450px) {
+  @media (max-width: 480px) {
     .image {
       width: 100%;
       height: 40%;
@@ -245,7 +245,7 @@
       padding: 0px; // remove section padding
       height: 60%;
       width: 100%;
-      font-size: 13px;
+      font-size: 12px;
       flex-direction: column;
 
       justify-content: space-between;
@@ -253,7 +253,7 @@
         font-size: 1.5em;
         padding-left: @info-container-padding;
         padding-right: @info-container-padding;
-        padding-top: @info-container-padding;
+        padding-top: 10px;
       }
 
       .subtitle {
